# social_app

./: .djlint  .env.dev.example  .env.prod.example  .gitignore  DEVELOPMENT.md  Procfile  README.md  TESTS_SUMMARY.md  cert.crt  cert.key  heroku.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/chatmodes/: Plan.chatmode.md
accounts/: authentication.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_contact.py
accounts/static/css/: base.css  user_detail.css
accounts/templates/: base.html
accounts/templates/accounts/: dashboard.html  disconnect_confirm.html  edit.html  login.html  register.html  (+1 more)
actions/: admin.py  models.py  tests.py  utils.py
actions/migrations/: 0001_initial.py
config/: settings.py  urls.py
docs/: architecture.md
images/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_rename_images_imag_created_33c7eb_idx_images_imag_created_d57897_idx.py  0003_rename_imagemodel_to_image.py  0004_alter_image_slug.py  0005_image_total_likes_and_more.py  0006_alter_image_url.py  0007_remove_image_image_image_edited_image_and_more.py  0008_auto_20251126_1105.py
images/templates/: bookmarklet_launcher.js
pages/: urls.py  views.py
static/css/: base.css  bookmarklet.css  material-symbols-outlined.css
static/js/: bookmarklet.js  bookmarklet_launcher.js  csrf.js  infinite_scroll.js  likes.js  messages.js
templates/: base.html
templates/includes/: avatar.html
theme/static_src/: tailwind.config.js
(+26 files in other folders)
