[project]
name = "social-app"
version = "0.1.0"
description = "A social platofrom where people can share AI generated images and interact with each other"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2.8",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "django-tailwind>=4.4.1",
    "django-storages[azure]>=1.14.4",
    "easy-thumbnails>=2.10.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "pyopenssl>=25.3.0",
    "python-decouple>=3.8",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "social-auth-app-django>=5.6.0",
    "werkzeug>=3.1.3",
    "whitenoise>=6.7.0",
]
